--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,16 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "composite": true,
     "declaration": true,
-    "lib": ["es2015", "dom"],
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "preserveWatchOutput": true,
     "module": "commonjs",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "lib": ["dom", "es2015"],
+    "jsx": "react",
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "outDir": "lib",
