--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jupyterlab-system-monitor",
-  "version": "0.1.7",
+  "version": "0.2.0",
   "description": "JupyterLab extension to display system information",
   "keywords": [
     "jupyter",
@@ -40,11 +40,11 @@
     "react-sparklines": "^1.7.0"
   },
   "devDependencies": {
-    "rimraf": "^2.6.1",
-    "typescript": "~3.1.1",
     "@types/react": "^16.8.1",
     "@types/react-dom": "^16.8.1",
-    "@types/react-sparklines": "^1.7.0"
+    "@types/react-sparklines": "^1.7.0",
+    "rimraf": "^2.6.1",
+    "typescript": "~3.1.1"
   },
   "resolutions": {
     "@types/react": "16.8.1"
