--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jupyterlab-system-monitor",
-  "version": "0.2.4",
+  "version": "0.4.0-alpha.2",
   "description": "JupyterLab extension to display system information",
   "keywords": [
     "jupyter",
@@ -34,7 +34,7 @@
     "@jupyterlab/application": "^1.0.0-alpha.6",
     "@jupyterlab/coreutils": "^3.0.0-alpha.6",
     "@jupyterlab/statusbar": "^1.0.0-alpha.6",
-    "jupyterlab-topbar": "^0.1.1",
+    "jupyterlab-topbar": "^0.4.0-alpha.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-sparklines": "^1.7.0"
