Add discovery for nbresuse package

--- a/package.json
+++ b/package.json
@@ -48,6 +48,16 @@
   },
   "jupyterlab": {
     "extension": true,
-    "schemaDir": "schema"
+    "schemaDir": "schema",
+    "discovery": {
+      "server": {
+        "managers": [
+          "pip"
+        ],
+        "base": {
+          "name": "nbresuse"
+        }
+      }
+    }
   }
 }
