--- a/tsconfigbase.json
+++ b/tsconfigbase.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "composite": true,
     "declaration": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
