Add conda to the companion package managers

--- a/system-monitor/package.json
+++ b/system-monitor/package.json
@@ -64,7 +64,8 @@
     "discovery": {
       "server": {
         "managers": [
-          "pip"
+          "pip",
+          "conda"
         ],
         "base": {
           "name": "nbresuse"
