--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
       run: python -m pip install jupyterlab nbresuse
     - name: Build and install the extension
       run: |
-        jlpm && jlpm run build
-        jupyter labextension link ./system-monitor-base  --no-build
-        jupyter labextension install jupyterlab-topbar-extension ./system-monitor
+        jlpm
+        jlpm run build
+        jlpm run install
     - name: Browser check
       run: python -m jupyterlab.browser_check
