--- a/packages/system-monitor/package.json
+++ b/packages/system-monitor/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "link": "jupyter labextension link .",
     "prettier": "prettier --write '**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}'",
     "clean": "rimraf lib && rimraf tsconfig.tsbuildinfo",
     "prepare": "npm run clean && npm run build",
