--- a/packages/system-monitor-base/package.json
+++ b/packages/system-monitor-base/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "build": "tsc",
     "link": "jupyter labextension link . --no-build",
-    "prettier": "prettier --write '**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}'",
+    "eslint": "eslint . --ext .ts,.tsx --fix",
+    "eslint:check": "eslint . --ext .ts,.tsx",
     "clean": "rimraf lib && rimraf tsconfig.tsbuildinfo",
     "prepare": "npm run clean && npm run build",
     "watch": "tsc -w"
@@ -43,23 +44,14 @@
     "@types/react": "~16.9.0",
     "@types/react-dom": "~16.9.0",
     "@types/react-sparklines": "^1.7.0",
-    "husky": "^3.0.0",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.17.0",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-jsdoc": "^22.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
     "rimraf": "^2.6.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "~3.8.1"
-  },
-  "lint-staged": {
-    "**/*{.ts,.tsx,.css,.json,.md}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   }
 }
