--- a/packages/system-monitor-base/tsconfig.json
+++ b/packages/system-monitor-base/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src",
-    "target": "esnext"
+    "rootDir": "src"
   },
-  "include": ["src/*"]
+  "include": ["src/**/*"]
 }
