Update CI install command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         jlpm
         jlpm run build
-        jlpm run install
+        jlpm run link
 
     - name: Browser check
       run: python -m jupyterlab.browser_check
