--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,21 +17,22 @@ jobs:
     - name: Install node
       uses: actions/setup-node@v1
       with:
-       node-version: '10.x'
+       node-version: '12.x'
 
     - name: Install Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: '3.8'
 
     - name: Install JupyterLab
-      run: python -m pip install jupyterlab nbresuse
-
-    - name: Build and install the extension
       run: |
-        jlpm
-        jlpm run build
-        jlpm run link
+        python -m pip install jupyterlab --pre
+        python -m pip install nbresuse
+
+    - name: Install the extension
+      run: |
+        python -m pip install .
+        jupyter labextension list 2>&1 | grep -ie "jupyterlab-system-monitor.*OK"
 
     - name: Browser check
       run: python -m jupyterlab.browser_check
