--- a/packages/system-monitor/package.json
+++ b/packages/system-monitor/package.json
@@ -25,22 +25,34 @@
     "url": "https://github.com/jtpio/jupyterlab-system-monitor.git"
   },
   "scripts": {
-    "build": "tsc",
-    "link": "jupyter labextension link . --no-build",
-    "clean": "rimraf lib && rimraf tsconfig.tsbuildinfo",
-    "prepare": "npm run clean && npm run build",
-    "watch": "tsc -w"
+    "build": "jlpm run build:lib && jlpm run build:labextension:dev",
+    "build:labextension": "jupyter labextension build .",
+    "build:labextension:dev": "jupyter labextension build --development True .",
+    "build:lib": "tsc",
+    "build:prod": "jlpm run build:lib && jlpm run build:labextension",
+    "clean": "jlpm run clean:lib",
+    "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
+    "clean:labextension": "rimraf jupyterlab-system-monitor/labextension",
+    "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
+    "eslint": "eslint . --ext .ts,.tsx --fix",
+    "eslint:check": "eslint . --ext .ts,.tsx",
+    "install:extension": "jupyter labextension develop --overwrite .",
+    "prepare": "jlpm run clean && jlpm run build:prod",
+    "watch": "run-p watch:src watch:labextension",
+    "watch:labextension": "jupyter labextension watch .",
+    "watch:src": "tsc -w"
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.0.0",
-    "@jupyterlab/statusbar": "^2.0.0",
-    "@jupyterlab/settingregistry": "^2.0.0",
-    "jupyterlab-topbar": "^0.5.0",
-    "jupyterlab-system-monitor-base": "^0.6.0"
+    "@jupyterlab/application": "^3.0.0-rc.7",
+    "@jupyterlab/settingregistry": "^3.0.0-rc.7",
+    "@jupyterlab/statusbar": "^3.0.0-rc.7",
+    "jupyterlab-system-monitor-base": "^0.6.0",
+    "jupyterlab-topbar": "^0.5.0"
   },
   "devDependencies": {
-    "rimraf": "^2.6.1",
-    "typescript": "~3.8.1"
+    "@jupyterlab/builder": "^3.0.0-rc.7",
+    "rimraf": "^3.0.2",
+    "typescript": "~4.0.3"
   },
   "jupyterlab": {
     "extension": true,
@@ -55,6 +67,7 @@
           "name": "nbresuse"
         }
       }
-    }
+    },
+    "outputDir": "../../jupyterlab-system-monitor/labextension"
   }
 }
