--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
+    "build:prod": "lerna run build:prod --stream --scope jupyterlab-system-monitor",
     "clean": "lerna run clean",
+    "develop": "jupyter labextension develop packages/system-monitor --overwrite",
     "lint": "jlpm run eslint && jlpm run prettier",
     "lint:check": "jlpm run eslint:check && jlpm run prettier:check",
     "eslint": "eslint . --ext .ts,.tsx --fix",
