--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Install the extension
       run: |
-        python -m pip install .
+        python -m pip install -e .
         jupyter labextension list 2>&1 | grep -ie "jupyterlab-system-monitor.*OK"
 
     - name: Browser check
