--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
 
     - name: Install the extension
       run: |
+        jlpm bootstrap
         python -m pip install -e .
         jupyter labextension list 2>&1 | grep -ie "jupyterlab-system-monitor.*OK"
 
