--- a/packages/system-monitor-base/package.json
+++ b/packages/system-monitor-base/package.json
@@ -33,6 +33,9 @@
   },
   "dependencies": {
     "@jupyterlab/apputils": "^3.0.0-rc.7",
+    "@jupyterlab/services": "^6.0.0-rc.7",
+    "@lumino/coreutils": "^1.5.3",
+    "@lumino/polling": "^1.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-sparklines": "^1.7.0"
