--- a/packages/system-monitor/package.json
+++ b/packages/system-monitor/package.json
@@ -45,6 +45,8 @@
     "@jupyterlab/application": "^3.0.0-rc.7",
     "@jupyterlab/settingregistry": "^3.0.0-rc.7",
     "jupyterlab-system-monitor-base": "^0.6.0",
+    "@lumino/coreutils": "^1.5.3",
+    "@lumino/signaling": "^1.4.3",
     "jupyterlab-topbar": "^0.6.0"
   },
   "devDependencies": {
