Add jupyterlab-topbar as shared package

--- a/packages/system-monitor/package.json
+++ b/packages/system-monitor/package.json
@@ -68,6 +68,12 @@
         }
       }
     },
-    "outputDir": "../../jupyterlab-system-monitor/labextension"
+    "outputDir": "../../jupyterlab-system-monitor/labextension",
+    "sharedPackages": {
+      "jupyterlab-topbar": {
+        "bundled": false,
+        "singleton": true
+      }
+    }
   }
 }
