--- a/packages/system-monitor-base/package.json
+++ b/packages/system-monitor-base/package.json
@@ -42,8 +42,8 @@
     "react-sparklines": "^1.7.0"
   },
   "devDependencies": {
-    "@types/react": "~16.9.0",
-    "@types/react-dom": "~16.9.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-sparklines": "^1.7.0",
     "rimraf": "^3.0.2",
     "typescript": "~4.0.3"
